--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -8,7 +8,7 @@ spring:
     driver-class-name: com.microsoft.sqlserver.jdbc.SQLServerDriver
     url: ${DB_URL:jdbc:sqlserver://localhost:1433;databaseName=ql_dat_phong;encrypt=true;trustServerCertificate=true}
     username: ${DB_USERNAME:sa}
-    password: ${DB_PASSWORD:Hihi123456@}
+    password: ${DB_PASSWORD:root}
   jpa:
     hibernate:
       ddl-auto: none
